--- a/META.yml
+++ b/META.yml
@@ -8,12 +8,12 @@ build_requires:
   File::chdir: '0'
   IO::Handle: '0'
   IPC::Open3: '0'
+  Test::Exception: '0'
   Test::More: '0.98'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-  Perl::osnames: '0.09'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.143240'
+generated_by: 'Dist::Zilla version 5.035, CPAN::Meta::Converter version 2.150001'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +21,7 @@ meta-spec:
 name: DBIx-Diff-Schema
 requires:
   DBI: '0'
-  Log::Any: '0'
+  Log::Any::IfLOG: '0'
   Rinci: v1.1.0
   Scalar::Util::Numeric: '0'
   experimental: '0'
@@ -30,10 +30,10 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=DBIx-Diff-Schema
   homepage: https://metacpan.org/release/DBIx-Diff-Schema
   repository: git://github.com/perlancar/perl-DBIx-Diff-Schema.git
-version: '0.04'
+version: '0.05'
 x_Dist_Zilla:
   perl:
-    version: '5.018002'
+    version: '5.018004'
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
@@ -47,62 +47,62 @@ x_Dist_Zilla:
           prune_directory: []
           root: .
       name: '@Author::PERLANCAR/@Filter/GatherDir'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::PERLANCAR/@Filter/PruneCruft'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::PERLANCAR/@Filter/ManifestSkip'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::PERLANCAR/@Filter/MetaYAML'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::PERLANCAR/@Filter/License'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::PERLANCAR/@Filter/PodCoverageTests'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::PERLANCAR/@Filter/PodSyntaxTests'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Author::PERLANCAR/@Filter/ExtraTests'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::PERLANCAR/@Filter/ExecDir'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::PERLANCAR/@Filter/ShareDir'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::MakeMaker
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 1
       name: '@Author::PERLANCAR/@Filter/MakeMaker'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::PERLANCAR/@Filter/Manifest'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::PERLANCAR/@Filter/ConfirmRelease'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::PERLANCAR/@Filter/UploadToCPAN'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::Rinci::AbstractFromMeta
       name: '@Author::PERLANCAR/Rinci::AbstractFromMeta'
@@ -118,7 +118,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: '@Author::PERLANCAR/CheckChangeLog'
-      version: '0.01'
+      version: '0.02'
     -
       class: Dist::Zilla::Plugin::CheckMetaResources
       name: '@Author::PERLANCAR/CheckMetaResources'
@@ -126,19 +126,23 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::PERLANCAR/MetaJSON'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::PERLANCAR/MetaConfig'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::GenShellCompletion
       name: '@Author::PERLANCAR/GenShellCompletion'
-      version: '0.07'
+      version: '0.09'
     -
       class: Dist::Zilla::Plugin::OurDate
       name: '@Author::PERLANCAR/OurDate'
       version: '0.02'
+    -
+      class: Dist::Zilla::Plugin::PERLANCAR::OurPkgVersion
+      name: '@Author::PERLANCAR/PERLANCAR::OurPkgVersion'
+      version: '0.03'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -150,87 +154,95 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Name
               name: '@Author::PERLANCAR/Name'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Version
               name: '@Author::PERLANCAR/Version'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Region
               name: '@Author::PERLANCAR/prelude'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Collect
               name: FUNCTIONS
-              version: '4.009'
-            -
-              class: Pod::Weaver::Plugin::Rinci
-              name: '@Author::PERLANCAR/Rinci'
-              version: '0.26'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@Author::PERLANCAR/Leftovers'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Region
               name: '@Author::PERLANCAR/postlude'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Completion::GetoptLongComplete
               name: '@Author::PERLANCAR/Completion::GetoptLongComplete'
-              version: '0.05'
+              version: '0.06'
+            -
+              class: Pod::Weaver::Section::Completion::GetoptLongSubcommand
+              name: '@Author::PERLANCAR/Completion::GetoptLongSubcommand'
+              version: '0.02'
             -
               class: Pod::Weaver::Section::Completion::PerinciCmdLine
               name: '@Author::PERLANCAR/Completion::PerinciCmdLine'
-              version: '0.09'
+              version: '0.10'
             -
               class: Pod::Weaver::Section::Homepage::DefaultCPAN
               name: '@Author::PERLANCAR/Homepage::DefaultCPAN'
-              version: '0.03'
+              version: '0.05'
             -
               class: Pod::Weaver::Section::Source::DefaultGitHub
               name: '@Author::PERLANCAR/Source::DefaultGitHub'
-              version: '0.05'
+              version: '0.07'
             -
               class: Pod::Weaver::Section::Bugs::DefaultRT
               name: '@Author::PERLANCAR/Bugs::DefaultRT'
-              version: '0.03'
+              version: '0.05'
             -
               class: Pod::Weaver::Section::Authors
               name: '@Author::PERLANCAR/Authors'
-              version: '4.009'
+              version: '4.011'
             -
               class: Pod::Weaver::Section::Legal
               name: '@Author::PERLANCAR/Legal'
-              version: '4.009'
+              version: '4.011'
+            -
+              class: Pod::Weaver::Plugin::Rinci
+              name: '@Author::PERLANCAR/Rinci'
+              version: '0.40'
+            -
+              class: Pod::Weaver::Plugin::AppendPrepend
+              name: '@Author::PERLANCAR/AppendPrepend'
+              version: '0.01'
             -
               class: Pod::Weaver::Plugin::EnsureUniqueSections
               name: '@Author::PERLANCAR/EnsureUniqueSections'
@@ -238,17 +250,21 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: '@Author::PERLANCAR/SingleEncoding'
-              version: '4.009'
+              version: '4.011'
       name: '@Author::PERLANCAR/PodWeaver'
       version: '4.006'
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@Author::PERLANCAR/PruneFiles'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::PERLANCAR/ReadmeFromPod'
-      version: '0.21'
+      version: '0.32'
+    -
+      class: Dist::Zilla::Plugin::Rinci::AddPrereqs
+      name: '@Author::PERLANCAR/Rinci::AddPrereqs'
+      version: '0.06'
     -
       class: Dist::Zilla::Plugin::Rinci::Validate
       name: '@Author::PERLANCAR/Rinci::Validate'
@@ -257,10 +273,6 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::SetScriptShebang
       name: '@Author::PERLANCAR/SetScriptShebang'
       version: '0.01'
-    -
-      class: Dist::Zilla::Plugin::PERLANCAR::OurPkgVersion
-      name: '@Author::PERLANCAR/PERLANCAR::OurPkgVersion'
-      version: '0.03'
     -
       class: Dist::Zilla::Plugin::Test::Compile
       config:
@@ -281,11 +293,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::Rinci
       name: '@Author::PERLANCAR/Test::Rinci'
-      version: '0.01'
+      version: '0.02'
     -
-      class: Dist::Zilla::Plugin::PERLANCAR::GenTodoMd
-      name: '@Author::PERLANCAR/PERLANCAR::GenTodoMd'
-      version: '0.03'
+      class: Dist::Zilla::Plugin::EnsureSQLSchemaVersionedTest
+      name: '@Author::PERLANCAR/EnsureSQLSchemaVersionedTest'
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -293,7 +305,7 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: TestRequires
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -301,41 +313,41 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '5.025'
+      version: '5.035'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '5.025'
+      version: '5.035'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: '0'
-    version: '5.025'
+      is_trial: ''
+    version: '5.035'
