--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.035, CPAN::Meta::Converter version 2.150001'
+generated_by: 'Dist::Zilla version 5.037, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,7 +22,6 @@ name: DBIx-Diff-Schema
 requires:
   DBI: '0'
   Log::Any::IfLOG: '0'
-  Rinci: v1.1.0
   Scalar::Util::Numeric: '0'
   experimental: '0'
   perl: '5.010001'
@@ -30,10 +29,10 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=DBIx-Diff-Schema
   homepage: https://metacpan.org/release/DBIx-Diff-Schema
   repository: git://github.com/perlancar/perl-DBIx-Diff-Schema.git
-version: '0.06'
+version: '0.07'
 x_Dist_Zilla:
   perl:
-    version: '5.018004'
+    version: '5.022000'
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
@@ -47,66 +46,66 @@ x_Dist_Zilla:
           prune_directory: []
           root: .
       name: '@Author::PERLANCAR/@Filter/GatherDir'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::PERLANCAR/@Filter/PruneCruft'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::PERLANCAR/@Filter/ManifestSkip'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::PERLANCAR/@Filter/MetaYAML'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::PERLANCAR/@Filter/License'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::PERLANCAR/@Filter/PodCoverageTests'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::PERLANCAR/@Filter/PodSyntaxTests'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Author::PERLANCAR/@Filter/ExtraTests'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::PERLANCAR/@Filter/ExecDir'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::PERLANCAR/@Filter/ShareDir'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::MakeMaker
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 1
       name: '@Author::PERLANCAR/@Filter/MakeMaker'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::PERLANCAR/@Filter/Manifest'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::PERLANCAR/@Filter/ConfirmRelease'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::PERLANCAR/@Filter/UploadToCPAN'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::Rinci::AbstractFromMeta
       name: '@Author::PERLANCAR/Rinci::AbstractFromMeta'
-      version: '0.06'
+      version: '0.08'
     -
       class: Dist::Zilla::Plugin::PodnameFromFilename
       name: '@Author::PERLANCAR/PodnameFromFilename'
@@ -114,7 +113,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PERLANCAR::CheckDepDists
       name: '@Author::PERLANCAR/PERLANCAR::CheckDepDists'
-      version: '0.01'
+      version: '0.04'
     -
       class: Dist::Zilla::Plugin::PERLANCAR::MetaResources
       name: '@Author::PERLANCAR/PERLANCAR::MetaResources'
@@ -130,23 +129,31 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::PERLANCAR/MetaJSON'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::PERLANCAR/MetaConfig'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::GenShellCompletion
       name: '@Author::PERLANCAR/GenShellCompletion'
       version: '0.09'
     -
+      class: Dist::Zilla::Plugin::Authority
+      name: '@Author::PERLANCAR/Authority'
+      version: '1.009'
+    -
       class: Dist::Zilla::Plugin::OurDate
       name: '@Author::PERLANCAR/OurDate'
+      version: '0.03'
+    -
+      class: Dist::Zilla::Plugin::OurDist
+      name: '@Author::PERLANCAR/OurDist'
       version: '0.02'
     -
       class: Dist::Zilla::Plugin::PERLANCAR::OurPkgVersion
       name: '@Author::PERLANCAR/PERLANCAR::OurPkgVersion'
-      version: '0.03'
+      version: '0.04'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -158,67 +165,67 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Name
               name: '@Author::PERLANCAR/Name'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Version
               name: '@Author::PERLANCAR/Version'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Region
               name: '@Author::PERLANCAR/prelude'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: FUNCTIONS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@Author::PERLANCAR/Leftovers'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Region
               name: '@Author::PERLANCAR/postlude'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Completion::GetoptLongComplete
               name: '@Author::PERLANCAR/Completion::GetoptLongComplete'
-              version: '0.06'
+              version: '0.07'
             -
               class: Pod::Weaver::Section::Completion::GetoptLongSubcommand
               name: '@Author::PERLANCAR/Completion::GetoptLongSubcommand'
-              version: '0.02'
+              version: '0.03'
             -
               class: Pod::Weaver::Section::Completion::PerinciCmdLine
               name: '@Author::PERLANCAR/Completion::PerinciCmdLine'
-              version: '0.10'
+              version: '0.13'
             -
               class: Pod::Weaver::Section::Homepage::DefaultCPAN
               name: '@Author::PERLANCAR/Homepage::DefaultCPAN'
@@ -234,15 +241,15 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Section::Authors
               name: '@Author::PERLANCAR/Authors'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Legal
               name: '@Author::PERLANCAR/Legal'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Plugin::Rinci
               name: '@Author::PERLANCAR/Rinci'
-              version: '0.40'
+              version: '0.42'
             -
               class: Pod::Weaver::Plugin::AppendPrepend
               name: '@Author::PERLANCAR/AppendPrepend'
@@ -254,13 +261,13 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: '@Author::PERLANCAR/SingleEncoding'
-              version: '4.011'
+              version: '4.012'
       name: '@Author::PERLANCAR/PodWeaver'
       version: '4.006'
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@Author::PERLANCAR/PruneFiles'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::PERLANCAR/ReadmeFromPod'
@@ -293,7 +300,7 @@ x_Dist_Zilla:
             - ':ExecFiles'
           skips: []
       name: '@Author::PERLANCAR/Test::Compile'
-      version: '2.052'
+      version: '2.053'
     -
       class: Dist::Zilla::Plugin::Test::Rinci
       name: '@Author::PERLANCAR/Test::Rinci'
@@ -309,7 +316,7 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: TestRequires
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -317,41 +324,50 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: '5.035'
+      version: '5.037'
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: develop
+          type: recommends
+      name: DevelopRecommends
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '5.035'
+      version: '5.037'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '5.035'
+      version: '5.037'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: ''
-    version: '5.035'
+      is_trial: '0'
+    version: '5.037'
+x_authority: cpan:PERLANCAR
